--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "pairproject",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,6 +18,5 @@
   },
   "devDependencies": {
     "sequelize-cli": "^6.6.1"
-  },
-  "description": ""
+  }
 }
